# strava_py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASING.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: deploy.yml  test.yml
src/strava_py/: __main__.py  cli.py  plot_map.py  process_data.py
src/stravavis/: __main__.py  cli.py  plot_calendar.py  plot_dumbbell.py  plot_elevations.py  plot_facets.py  plot_landscape.py  plot_map.py  process_activities.py  process_data.py
strava_py/: plot_facets.py
tests/csv/: activities.csv
tests/gpx/: activity_7448910422.gpx  empty-trkseg.gpx  invalid-lon-lat-missing.gpx
